--- a/FoodDelivery/src/components/Footer/Footer.css
+++ b/FoodDelivery/src/components/Footer/Footer.css
@@ -9,6 +9,9 @@
     padding: 80px;
     margin-top: 100px;
 }
+.footer-content-left h1{
+    color: tomato;
+}
 .footer-content{
     width: 100%;
     display: grid;
@@ -42,4 +45,14 @@
     margin: 20px 0;
     background-color: gray;
     border: none;
+}
+@media (max-width :1050px){
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
