--- a/FoodDelivery/src/components/navbar/Navbar.css
+++ b/FoodDelivery/src/components/navbar/Navbar.css
@@ -11,6 +11,7 @@
 } */
 .Navbar h1{
     font-weight: 900;
+    color: tomato;
     
 }
 .navbar-menu{
@@ -63,4 +64,52 @@
     width: 20px;
     height: 20px;
     cursor: pointer;
+}
+@media (max-width:1050px){
+    .Navbar h1{
+        font-size: 20px;
+    }
+    .navbar-menu{
+        gap: 20px;
+        font-size: 17px;
+    }
+    .navbar-right{
+        gap: 30px;
+    }
+    .navbar-right img{
+       width: 22px; 
+    }
+    .navbar-right button{
+        padding: 8px 25px;
+    }
+    
+}
+
+@media (max-width:900px){
+    .Navbar h1{
+        font-size: 20px;
+    }
+    .navbar-menu{
+        gap: 15px;
+        font-size: 16px;
+    }
+    .navbar-right{
+        gap: 20px;
+    }
+    .navbar-right img{
+       width: 20px; 
+    }
+    .navbar-right button{
+        padding: 7px 20px;
+        font-size: 15px;
+    }
+    
+}
+@media (max-width:750px){
+    
+    .navbar-menu{
+        display: none;
+    }
+    
+    
 }
